--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
         <option value="text-shadow: 5px 5px;">two fucks</option>
         <option value="color:red;">red fuck</option>
         <option value="color:blue;">blue fuck</option>
+        <option value="text-decoration: line-through;">
+        	crossed fuck</option>
+        <option value="text-transform: uppercase;">capital fuck</option>
+        <option value="font-size: 2em">
+        	big fuck</option>
+        <option value="font-size: 0.5em">
+        	little fuck</option>
     </select>
     <button onclick="fuck()">enter</button>
     <p id="fuck"></p>
