--- a/index.html
+++ b/index.html
@@ -3,24 +3,41 @@
   <head>
     <meta charset="UTF-8">
     <title>fuck</title>
+    <style type="text/css">
+    	table, tr, td {
+            border: 1px solid white;
+            width: 100%;
+        }
+    </style>
   </head>
   <body>
-    <select id="fuckSelector">
-    	<option value="">one fuck</option>
-        <option value="text-shadow: 5px 5px;">two fucks</option>
-        <option value="color:red;">red fuck</option>
-        <option value="color:blue;">blue fuck</option>
-        <option value="text-decoration: line-through;">
-        	crossed fuck</option>
-        <option value="text-transform: uppercase;">capital fuck</option>
-        <option value="font-size: 2em">
-        	big fuck</option>
-        <option value="font-size: 0.5em">
-        	little fuck</option>
-    </select>
-    <button onclick="fuck()">enter</button>
-    <p id="fuck"></p>
-    
+    <table>
+    	<tr>
+        	<td>
+                <select id="fuckSelector">
+                  <option value="">one fuck</option>
+                  <option value="text-shadow: 5px 5px;">
+                  	two fucks</option>
+                  <option value="color:red;">red fuck</option>
+                  <option value="color:blue;">blue fuck</option>
+                  <option value="text-decoration: line-through;">
+                      crossed fuck</option>
+                  <option value="text-transform: uppercase;">
+                    capital fuck</option>
+                  <option value="font-size: 2em">
+                      big fuck</option>
+                  <option value="font-size: 0.5em">
+                      little fuck</option>
+                </select>
+            	<button onclick="fuck()">enter</button>
+            </td>
+       	</tr>
+      	<tr>
+        	<td>
+            	<p id="fuck"></p>
+            </td>
+        </tr>
+    </table>
   <script type="text/javascript">
    function fuck()
     {
