--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
             border: 1px solid white;
             width: 100%;
         }
+        body, button, select {
+        	font-size: 16px;
+        }
     </style>
   </head>
   <body>
@@ -24,10 +27,18 @@
                       crossed fuck</option>
                   <option value="text-transform: uppercase;">
                     capital fuck</option>
-                  <option value="font-size: 2em">
+                  <option value="font-size: 200%">
                       big fuck</option>
-                  <option value="font-size: 0.5em">
+                  <option value="font-size: 50%">
                       little fuck</option>
+                  <option value="font-size: 300%">
+                      huge fuck</option>
+                  <option value="letter-spacing: 5px">
+                      wide fuck</option>
+                  <option value="font-weight: bold;">
+                      bold fuck</option>
+                  <option value="font-style: italic;">
+                      suspicious fuck</option>
                 </select>
             	<button onclick="fuck()">enter</button>
             </td>
